[tool.poetry]
name = "lms"
version = "0.1.0"
description = "Learning Management System"
authors = ["Shadyaobuya <shadyaobuyagard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
